Fixed horizontal scrolling on mobile devices

--- a/client/src/components/Hero/hero.scss
+++ b/client/src/components/Hero/hero.scss
@@ -19,12 +19,11 @@
 }
 
 article {
-	position: asbolute;
+	position: absolute;
 	transition: all 1s;
 }
 
 .hero-card {
-	// Card styling
 	padding: 20px;
 	border: 1px solid #0a6817;
 	outline: 1px solid #aaaaaa;
